name:                achievements
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sdemos/achievements#readme
license:             MIT
license-file:        LICENSE
author:              Stephen Demos
maintainer:          stphndemos@gmail.com
copyright:           2010 Stephen Demos
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Achievements
  build-depends:       base
                     , servant
                     , servant-server
                     , warp
  default-language:    Haskell2010

executable achievements
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , achievements
                     , servant
                     , servant-server
                     , warp
  default-language:    Haskell2010

test-suite achievements-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , achievements
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdemos/achievements
